--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>LoginPage</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <form action="index.html" method="get">
-        <label for="login">login</label>
-        <input type="text" id="login" required>
-        <br>
-        <label for="pass" name="pass">password</label>
-        <input type="password" name="pass" id="pass" required>
-    </form>
+    <section>
+        <div class="login-box">
+            <form action="" method="" id="">
+                <h2>Login</h2>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="mail-outline"></ion-icon></span>
+                    <input type="email" required>
+                    <label for="email">Email</label>
+                </div>
+                <div class="input-box">
+                    <span class="icon"><ion-icon name="lock-closed-outline"></ion-icon></span>
+                    <input type="password" required>
+                    <label for="email">Password</label>
+                </div>
+                <div class="remember-forgot">
+                    <label><input type="checkbox">Remember me</label>
+                    <a href="#">Forget Password?</a>
+                </div>
+                <button type="submit">Login</button>
+                <div class="register-link">
+                    <p>Don't have a account? <a href="#">Sign-in</a></p>
+                </div>
+            </form>
+        </div>
+    </section>
 </body>
+
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
 </html>
